--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@
 }
 
 :root {
-  --mainColor: #1a1a1a;
+  --greyNavigation: #b5b5b5;
+  --yellow: #eac04b;
 }
 
 body {
@@ -15,7 +16,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  opacity: 0.9;
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -36,5 +36,4 @@ img {
 .contenedor {
   max-width: 1800px;
   margin: auto;
-  border: 3px dotted red;
 }
