--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,5 @@
 @import url(./main.css);
 @import url(./header.css);
 @import url(./footer.css);
+@import url(./clases.css);
+@import url(./nuevo-personaje.css);
