--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,31 @@
 }
 
 body {
-  background-color: black;
+  margin: 0;
+  color: white;
+  font-family: 'Tinos', serif;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3 {
+  text-shadow: black 0px 0px 3px, black 0px 0px 6px, black 0px 0px 6px;
+}
+
+h1,
+h2 {
+  font-weight: 400;
+  width: 100%;
+  border-bottom: 1px solid var(--yellow);
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h1 {
+  font-size: 3em;
 }
 
 .fondo {
@@ -33,7 +57,25 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 .contenedor {
   max-width: 1800px;
+  margin: auto;
+}
+
+section {
+  text-align: center;
+}
+
+section h2 {
+  margin-bottom: 0;
+}
+
+section picture {
+  width: 100%;
+  margin: auto;
+}
+
+section img {
   margin: auto;
 }
