--- a/Lostark-React/public/styles/login.css
+++ b/Lostark-React/public/styles/login.css
@@ -1,246 +1,397 @@
-.div-login-registro h1 {
-  text-align: center;
+.section-login-registro h1 {
+  margin-bottom: 0;
 }
 
-.div-login-registro-contenedor {
-  display: flex;
-  flex-direction: column;
+.container h2 {
+  color: white;
+  border: none;
+}
+
+.container {
+  position: relative;
   width: 100%;
   height: 100%;
-  margin: auto;
-  margin-top: 50px;
-  justify-content: center;
-  align-items: center;
-  --wrapperWidth: 700px;
-  --wrapperHeight: 400px;
-  --btnWidth: 200px;
-  --btnHeight: 100px;
-  --leftColor: #ffffff;
-  --rightColor: #0e4ceb;
-  font-family: 'Montserrat', 'Open sans';
+  margin: 0;
+  min-height: 100vh;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.499);
 }
 
-.div-wrapper {
+.forms-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.signin-signup {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 75%;
+  width: 50%;
+  transition: 1s 0.7s ease-in-out;
+  display: grid;
+  grid-template-columns: 1fr;
+  z-index: 5;
+}
+
+form {
   display: flex;
-  width: var(--wrapperWidth);
-  height: var(--wrapperHeight);
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 0rem 5rem;
+  transition: all 0.2s 0.7s;
+  overflow: hidden;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+form.sign-up-form {
+  opacity: 0;
+  z-index: 1;
+}
+
+form.sign-in-form {
+  z-index: 2;
+}
+
+.title {
+  font-size: 2.2rem;
+  color: #444;
+  margin-bottom: 10px;
+}
+
+.input-field {
+  max-width: 380px;
+  width: 100%;
+  background-color: #f0f0f0;
+  margin: 10px 0;
+  height: 55px;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0 0.4rem;
   position: relative;
 }
 
-.div-derecha,
-.div-izquierda {
-  width: 100%;
-  color: black;
-  margin: 40px;
+.input-field i {
   text-align: center;
-  color: white;
-  font-size: 1.5rem;
+  line-height: 55px;
+  color: #acacac;
+  transition: 0.5s;
+  font-size: 1.1rem;
 }
 
-.h2-login,
-.h2-registro {
-  text-align: center;
-  margin-top: 10px;
-  font-family: 'Tinos', serif;
-}
-
-.btn-login,
-.btn-registro {
-  display: none;
-}
-
-.btn-login + label,
-.btn-registro + label {
-  position: absolute;
-  content: '';
-  cursor: pointer;
-  text-align: center;
-  font-size: 1.5rem;
-  width: var(--btnWidth);
-  height: var(--btnHeight);
-  border: 1px solid var(--yellow);
-  color: var(--yellow);
-  bottom: 4em;
-}
-
-.btn-login + label {
-  right: calc(50% / 2 - var(--btnWidth) / 2);
-}
-
-.btn-registro + label {
-  left: calc(50% / 2 - var(--btnWidth) / 2);
-}
-
-.btn-login + label:before,
-.btn-registro + label:before {
-  position: absolute;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.276);
-  padding-top: calc(var(--btnHeight) / 3);
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  text-align: center;
-  transition: all 0.5s;
-}
-
-.btn-login + label:hover:before,
-.btn-registro + label:hover:before {
-  background-color: #ac7d00;
-  color: #000;
-  background-image: linear-gradient(
-    90deg,
-    #d8bd7d,
-    #efd8af,
-    #fcf3ca,
-    #dfb872,
-    #c5a55e
-  );
-}
-
-.btn-login + label:before {
-  content: 'Iniciar sesión';
-}
-
-.btn-registro + label:before {
-  content: '¡Regístrate!';
-}
-
-.form {
-  overflow: hidden;
-  position: absolute;
-  background-image: url(../resources/background-login-registro.jpeg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 0.5em 2em;
-  height: 400px;
-  width: 340px;
-  transform: translate3d(
-    calc(var(--wrapperWidth) / 10),
-    calc(var(--wrapperHeight) / -10),
-    0
-  );
-  box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
-  border-radius: 20px;
-  transition: transform 0.35s ease-in-out;
-}
-
-.form input {
-  height: 44px;
+.input-field input {
+  background: none;
   outline: none;
   border: none;
-  border-bottom: 1px solid #f2f2f2;
-  padding: 0 1em;
-  font-size: 1em;
-  transition: all 0.5s;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: #333;
 }
 
-.form input:focus {
-  border-bottom: 1px solid mediumseagreen;
+input:-webkit-autofill {
+  border-radius: 55px;
+  -webkit-text-fill-color: #333;
 }
 
-.form label {
-  color: rgb(140, 38, 38);
+input:-webkit-autofill:focus {
+  -webkit-text-fill-color: #333;
+  border-radius: 55px;
 }
 
-.formButton {
-  display: none;
+.input-field input::placeholder {
+  color: #aaa;
+  font-weight: 500;
 }
 
-.formButton + label {
-  overflow: hidden;
-  position: relative;
+.social-text {
+  padding: 0.7rem 0;
+  font-size: 1rem;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+}
+
+.social-icon {
+  height: 46px;
+  width: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0.45rem;
+  color: #333;
+  border-radius: 50%;
+  border: 1px solid #333;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.social-icon:hover {
+  color: #000;
+  border-color: #4481eb;
+}
+/*Boton Login*/
+.btn {
+  width: 150px;
+  background-color: #5995fd;
+  border: none;
+  outline: none;
+  height: 49px;
+  border-radius: 49px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
   cursor: pointer;
-  width: 100%;
-  height: 44px;
-  border-radius: 0.25em;
-  background: mediumseagreen;
-  transition: all 0.25s ease-in;
+  transition: 0.5s;
 }
-
-.formButton + label:hover {
-  background: mediumaquamarine;
+/*Boton Login*/
+.btn:hover {
+  background-color: #4d84e2;
 }
-
-.formButton + label:before,
-.formButton + label:after {
+.panels-container {
   position: absolute;
-  left: 0;
-  right: 0;
+  height: 100%;
+  width: 100%;
   top: 0;
-  bottom: 0;
-  margin: auto;
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.image {
+  -webkit-filter: drop-shadow(0px 0px 70px rgb(0, 0, 0));
+  filter: drop-shadow(0px 0px 5px rgb(0, 0, 0));
+  transition: transform 1.1s ease-in-out;
+  transition-delay: 0.4s;
+  padding: 10px;
+  object-fit: contain;
+}
+
+.panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   text-align: center;
-  color: white;
-  padding-top: 0.85em;
-  transition: transform 0.25s ease-in;
+  z-index: 6;
 }
 
-.formButton + label:before {
-  content: 'Registrase';
+.left-panel {
+  pointer-events: all;
+  padding: 3rem 17% 0 12%;
 }
 
-.formButton + label:after {
-  content: 'Login';
-  transform: translateY(3em);
+.right-panel {
+  pointer-events: none;
+  padding: 3rem 12% 0 17%;
 }
 
-.fname,
-.email,
-.password,
-.h2-login,
-.h2-registro {
-  transition: all 0.35s ease-out;
+.panel .content {
+  color: #fff;
+  transition: transform 0.9s ease-in-out;
+  transition-delay: 0.6s;
 }
 
-.btn-login:checked ~ .form .h2-login {
-  transform: translateY(0em);
+.panel h3 {
+  font-weight: 600;
+  line-height: 1;
+  font-size: 1.5rem;
 }
 
-.btn-login:checked ~ .form .h2-registro {
-  transform: translateY(-15em);
+.panel p {
+  font-size: 0.95rem;
+  padding: 0.7rem 0;
 }
 
-.btn-registro:checked ~ .form .h2-login {
-  transform: translateY(-15em);
+.btn.transparent {
+  margin: 0;
+  background: none;
+  border: 2px solid #fff;
+  width: 130px;
+  height: 41px;
+  font-weight: 600;
+  font-size: 0.8rem;
 }
 
-.btn-registro:checked ~ .form .h2-registro {
-  transform: translateY(-2.2em);
+.right-panel .image,
+.right-panel .content {
+  transform: translateX(800px);
 }
 
-.btn-login:checked ~ .form {
-  transform: translate3d(
-    calc(var(--wrapperWidth) / 2.2),
-    calc(var(--wrapperHeight) / -20),
-    0
-  );
-  background-image: url(../resources/background-login-registro.jpeg);
+/* ANIMATION */
+
+.container.sign-up-mode:before {
+  transform: translate(100%, -50%);
+  right: 52%;
 }
 
-.btn-registro:checked ~ .form {
-  transform: translate3d(
-    calc(var(--wrapperWidth) / 20),
-    calc(var(--wrapperHeight) / -20),
-    0
-  );
-  background-image: url(../resources/background-registro.jpeg);
+.container.sign-up-mode .left-panel .image,
+.container.sign-up-mode .left-panel .content {
+  transform: translateX(-800px);
 }
 
-.btn-login:checked ~ .form .fname {
-  transform: translateY(-15em);
+.container.sign-up-mode .signin-signup {
+  left: 25%;
 }
 
-.btn-login:checked ~ .form .formButton + label:before {
-  transform: translateY(-2em);
+.container.sign-up-mode form.sign-up-form {
+  opacity: 1;
+  z-index: 2;
 }
 
-.btn-login:checked ~ .form .formButton + label:after {
-  transform: translateY(0em);
+.container.sign-up-mode form.sign-in-form {
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.sign-up-mode .right-panel .image,
+.container.sign-up-mode .right-panel .content {
+  transform: translateX(0%);
+}
+
+.container.sign-up-mode .left-panel {
+  pointer-events: none;
+}
+
+.container.sign-up-mode .right-panel {
+  pointer-events: all;
+}
+
+@media (max-width: 870px) {
+  .container {
+    min-height: 800px;
+    height: 100vh;
+  }
+  .signin-signup {
+    width: 100%;
+    top: 95%;
+    transform: translate(-50%, -100%);
+    transition: 1s 0.8s ease-in-out;
+  }
+
+  .signin-signup,
+  .container.sign-up-mode .signin-signup {
+    left: 50%;
+  }
+
+  .panels-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+  }
+
+  .panel {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2.5rem 8%;
+    grid-column: 1 / 2;
+  }
+
+  .right-panel {
+    grid-row: 3 / 4;
+  }
+
+  .left-panel {
+    grid-row: 1 / 2;
+  }
+
+  .image {
+    width: 200px;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.6s;
+  }
+
+  .panel .content {
+    padding-right: 15%;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.8s;
+  }
+
+  .panel h3 {
+    font-size: 1.2rem;
+  }
+
+  .panel p {
+    font-size: 0.7rem;
+    padding: 0.5rem 0;
+  }
+
+  .btn.transparent {
+    width: 110px;
+    height: 35px;
+    font-size: 0.7rem;
+  }
+
+  .container:before {
+    width: 1500px;
+    height: 1500px;
+    transform: translateX(-50%);
+    left: 30%;
+    bottom: 68%;
+    right: initial;
+    top: initial;
+    transition: 2s ease-in-out;
+  }
+
+  .container.sign-up-mode:before {
+    transform: translate(-50%, 100%);
+    bottom: 32%;
+    right: initial;
+  }
+
+  .container.sign-up-mode .left-panel .image,
+  .container.sign-up-mode .left-panel .content {
+    transform: translateY(-300px);
+  }
+
+  .container.sign-up-mode .right-panel .image,
+  .container.sign-up-mode .right-panel .content {
+    transform: translateY(0px);
+  }
+
+  .right-panel .image,
+  .right-panel .content {
+    transform: translateY(300px);
+  }
+
+  .container.sign-up-mode .signin-signup {
+    top: 5%;
+    transform: translate(-50%, 0);
+  }
+}
+
+@media (max-width: 570px) {
+  form {
+    padding: 0 1.5rem;
+  }
+
+  .image {
+    display: none;
+  }
+  .panel .content {
+    padding: 0.5rem 1rem;
+  }
+  .container {
+    padding: 1.5rem;
+  }
+
+  .container:before {
+    bottom: 72%;
+    left: 50%;
+  }
+
+  .container.sign-up-mode:before {
+    bottom: 28%;
+    left: 50%;
+  }
 }
