--- a/Lostark-React/public/styles/login.css
+++ b/Lostark-React/public/styles/login.css
@@ -1,7 +1,6 @@
 .section-login-registro h1 {
   margin-bottom: 0;
 }
-
 .container h2 {
   color: white;
   border: none;
@@ -9,12 +8,11 @@
 
 .container {
   position: relative;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  min-height: 100vh;
+  width: 70%;
+  margin: auto;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.499);
+  box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
 }
 
 .forms-container {
@@ -70,7 +68,6 @@ form.sign-in-form {
   background-color: #f0f0f0;
   margin: 10px 0;
   height: 55px;
-  border-radius: 55px;
   display: grid;
   grid-template-columns: 15% 85%;
   padding: 0 0.4rem;
@@ -126,6 +123,8 @@ input:-webkit-autofill:focus {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2px;
+  background-color: white;
   margin: 0 0.45rem;
   color: #333;
   border-radius: 50%;
@@ -159,7 +158,6 @@ input:-webkit-autofill:focus {
   background-color: #4d84e2;
 }
 .panels-container {
-  position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
@@ -370,7 +368,7 @@ input:-webkit-autofill:focus {
   }
 }
 
-@media (max-width: 570px) {
+@media (max-width: 870px) {
   form {
     padding: 0 1.5rem;
   }
