--- a/Lostark-React/public/styles/login.css
+++ b/Lostark-React/public/styles/login.css
@@ -1,6 +1,3 @@
-.section-login-registro h1 {
-  margin-bottom: 0;
-}
 .container h2 {
   color: white;
   border: none;
@@ -8,14 +5,20 @@
 
 .container {
   position: relative;
-  width: 70%;
+  width: 100%;
+  min-height: 60vh;
   margin: auto;
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.499);
+  background-image: url(../resources/background-registro.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
 }
 
 .forms-container {
+  box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+  background-color: rgba(0, 0, 0, 0.499);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -36,11 +39,12 @@
 }
 
 form {
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
-  padding: 0rem 5rem;
+  padding: 1rem;
   transition: all 0.2s 0.7s;
   overflow: hidden;
   grid-column: 1 / 2;
@@ -63,48 +67,9 @@ form.sign-in-form {
 }
 
 .input-field {
-  max-width: 380px;
   width: 100%;
-  background-color: #f0f0f0;
-  margin: 10px 0;
+  margin: 20px;
   height: 55px;
-  display: grid;
-  grid-template-columns: 15% 85%;
-  padding: 0 0.4rem;
-  position: relative;
-}
-
-.input-field i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  transition: 0.5s;
-  font-size: 1.1rem;
-}
-
-.input-field input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #333;
-}
-
-input:-webkit-autofill {
-  border-radius: 55px;
-  -webkit-text-fill-color: #333;
-}
-
-input:-webkit-autofill:focus {
-  -webkit-text-fill-color: #333;
-  border-radius: 55px;
-}
-
-.input-field input::placeholder {
-  color: #aaa;
-  font-weight: 500;
 }
 
 .social-text {
@@ -140,7 +105,7 @@ input:-webkit-autofill:focus {
 }
 /*Boton Login*/
 .btn {
-  width: 150px;
+  width: 50%;
   background-color: #5995fd;
   border: none;
   outline: none;
@@ -152,10 +117,6 @@ input:-webkit-autofill:focus {
   margin: 10px 0;
   cursor: pointer;
   transition: 0.5s;
-}
-/*Boton Login*/
-.btn:hover {
-  background-color: #4d84e2;
 }
 .panels-container {
   height: 100%;
