--- a/Lostark-React/public/styles/main.css
+++ b/Lostark-React/public/styles/main.css
@@ -83,3 +83,45 @@ section picture {
 section img {
   margin: auto;
 }
+
+input {
+  width: 100%;
+  box-shadow: black 0px 0px 10px 0px;
+  background-color: rgba(255, 255, 255, 0.499);
+  padding: 14px;
+  font-family: 'Montserrat', 'Open sans';
+  border-radius: 5px;
+  margin: 5px 0 10px;
+  font-size: 1.2rem;
+  color: black;
+}
+
+input::placeholder {
+  color: rgb(84, 84, 84);
+}
+
+.btn-verde {
+  text-align: center;
+  width: 100%;
+  margin-top: 50px;
+  padding: 20px;
+  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+  background-color: #44c767;
+  border: 1px solid #18ab29;
+  cursor: pointer;
+  color: black;
+  border-radius: 20px;
+  font-family: 'Montserrat', 'Open sans';
+  font-size: 1.2rem;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+  box-shadow: black 0px 0px 10px 0px;
+}
+
+.btn-verde:hover {
+  padding: 20px;
+  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+  background-color: #5cbf2a;
+  box-shadow: black 0px 0px 10px 0px;
+  text-shadow: 0 1px #c2ff9c;
+}
