--- a/Lostark-React/public/styles/no-login.css
+++ b/Lostark-React/public/styles/no-login.css
@@ -1,59 +1,39 @@
-@keyframes move-clouds-back {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 10000px 0;
-  }
-}
-@-webkit-keyframes move-clouds-back {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 10000px 0;
-  }
-}
-@-moz-keyframes move-clouds-back {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 10000px 0;
-  }
-}
-@-ms-keyframes move-clouds-back {
-  from {
-    background-position: 0;
-  }
-  to {
-    background-position: 10000px 0;
-  }
-}
-
-.clouds {
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.clouds {
-  background: transparent
-    url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top
-    center;
-  z-index: 2;
-  -moz-animation: move-clouds-back 200s linear infinite;
-  -ms-animation: move-clouds-back 200s linear infinite;
-  -o-animation: move-clouds-back 200s linear infinite;
-  -webkit-animation: move-clouds-back 200s linear infinite;
-  animation: move-clouds-back 200s linear infinite;
-}
-
 .div-no-login {
-  background-image: url('https://i.pinimg.com/736x/31/f6/d6/31f6d66045d966959e36793a5cde4a6b.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
+  max-width: 60%;
+  margin: auto;
+  margin-top: 2.5vh;
+  padding: 2.5vw;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.055);
+  box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+}
+.div-no-login h1 {
+  margin-top: 0;
+}
+
+.div-no-login p {
+  font-size: 1.5rem;
+  margin: 2.5vh;
+}
+
+.div-no-login a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-family: 'Montserrat', 'Open sans';
+  color: white;
+  border: 1px solid var(--yellow);
+  padding: 0.5vh 2vw;
+}
+
+.div-no-login a:hover {
+  background-color: #ac7d00;
+  color: #000;
+  background-image: linear-gradient(
+    90deg,
+    #d8bd7d,
+    #efd8af,
+    #fcf3ca,
+    #dfb872,
+    #c5a55e
+  );
 }
