--- a/Lostark-React/public/styles/mis-personajes.css
+++ b/Lostark-React/public/styles/mis-personajes.css
@@ -4,7 +4,7 @@
   grid-row: 1fr;
 }
 
-.div-mis-personajes .div-mi-personaje {
+.div-mi-personaje {
   text-align: left;
   margin: 5px;
   padding: 10px;
